Default for font-family-heading

--- a/assets/stylesheets/source/settings/_type.scss
+++ b/assets/stylesheets/source/settings/_type.scss
@@ -10,7 +10,7 @@
 // ----------------------------------------------------------------------------
 
 $font-family-base:     $helvetica !default;
-$font-family-heading:  $helvetica !default;
+$font-family-heading:  $font-family-base !default;
 $font-family-code:     $monospace !default;
 
 // Custom fonts
