--- a/assets/stylesheets/source/settings/_type.scss
+++ b/assets/stylesheets/source/settings/_type.scss
@@ -26,22 +26,19 @@ $font-family-code:     $monospace !default;
 // ----------------------------------------------------------------------------
 
 // $px-base: the document's base font size in pixels.
-// $font-size-base: the default size for body text (paragraphs, lists, etc.).
-// The unit you set here (px, em, rem) will be your default type unit.
-// $rem-fallback: whether or not to include px fallback for rem (IE8 support)
-// If you're sizing with pixels and using the modular-scale function,
-// you'll need to round off the values to get px integers.
+// $font-size-base: the unit you set here will be your default type unit.
 
-$px-base:           16px;
+$px-base:           16px !default;
 $font-size-base:    1rem !default;
+$font-size-ratio:   $golden !default;
 
-$font-size-xxl:     modular-scale($font-size-base,  4, $perfect-fourth) !default;
-$font-size-xl:      modular-scale($font-size-base,  3, $perfect-fourth) !default;
-$font-size-lg:      modular-scale($font-size-base,  2, $perfect-fourth) !default;
-$font-size-md:      modular-scale($font-size-base,  1, $perfect-fourth) !default;
-$font-size-base:    modular-scale($font-size-base,  0, $perfect-fourth) !default;
-$font-size-sm:      modular-scale($font-size-base, -1, $perfect-fourth) !default;
-$font-size-xs:      modular-scale($font-size-base, -2, $perfect-fourth) !default;
+$font-size-xxl:     font-size-scale(4) !default;
+$font-size-xl:      font-size-scale(3) !default;
+$font-size-lg:      font-size-scale(2) !default;
+$font-size-md:      font-size-scale(1) !default;
+$font-size-base:    font-size-scale(0) !default;
+$font-size-sm:      font-size-scale(-1) !default;
+$font-size-xs:      font-size-scale(-2) !default;
 
 // Vertical Rhythm
 // ----------------------------------------------------------------------------
@@ -49,7 +46,7 @@ $font-size-xs:      modular-scale($font-size-base, -2, $perfect-fourth) !default
 $line-height-base:            1.5 !default; // Unitless number
 $line-height-computed:        $font-size-base * $line-height-base !default;
 
-// $round-to-nearest-half-line: Allows the `type-scale` mixin and the `lines-
+// $round-to-nearest-half-line: Allows the `type-size` mixin and the `lines-
 // for-font-size` function to round the line height to the nearest half line
 // height instead of the nearest integral line height to avoid large spacing
 // between lines.
