--- a/assets/stylesheets/source/settings/_components.scss
+++ b/assets/stylesheets/source/settings/_components.scss
@@ -7,22 +7,22 @@
 // of the component's .scss file.
 
 // Border radius
-$border-radius-base:         px-to-rel(4px) !default;
-$border-radius-lg:           px-to-rel(6px) !default;
-$border-radius-sm:           px-to-rel(3px) !default;
+$border-radius-base:         4px !default;
+$border-radius-lg:           6px !default;
+$border-radius-sm:           3px !default;
 
 // Padding
-$padding-base-vertical:      px-to-rel(6px) !default;
-$padding-base-horizontal:    px-to-rel(12px) !default;
+$padding-base-vertical:      6px !default;
+$padding-base-horizontal:    12px !default;
 
-$padding-lg-vertical:        px-to-rel(10px) !default;
-$padding-lg-horizontal:      px-to-rel(16px) !default;
+$padding-lg-vertical:        10px !default;
+$padding-lg-horizontal:      16px !default;
 
-$padding-sm-vertical:        px-to-rel(5px) !default;
-$padding-sm-horizontal:      px-to-rel(10px) !default;
+$padding-sm-vertical:        5px !default;
+$padding-sm-horizontal:      10px !default;
 
-$padding-xs-vertical:        px-to-rel(1px) !default;
-$padding-xs-horizontal:      px-to-rel(5px) !default;
+$padding-xs-vertical:        1px !default;
+$padding-xs-horizontal:      5px !default;
 
 // Active element colors
 $component-active-color:    #fff !default;
