--- a/assets/stylesheets/source/base/_main.scss
+++ b/assets/stylesheets/source/base/_main.scss
@@ -1,8 +1,8 @@
 // ============================================================================
-// Scaffolding
+// Main
 // ============================================================================
 
-// Scaffolding is the base HTML structure all web pages will have.
+// Main is the base HTML structure all web pages will have.
 
 // Reset the box-sizing
 *,
