--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -31,6 +31,7 @@
 @import "mixins/debug";
 @import "mixins/font-size";
 @import "mixins/headings";
+@import "mixins/hyphens";
 @import "mixins/rem-fallback";
 @import "mixins/vertical-rhythm";
 @import "mixins/visual-baseline";
