Add contents to normalize

--- a/assets/stylesheets/source/base/_normalize.scss
+++ b/assets/stylesheets/source/base/_normalize.scss
@@ -7,6 +7,18 @@
 // Source:
 // License:    MIT License
 
+// Contents
+// ----------------------------------------------------------------------------
+
+// HTML5 display definitions
+// Base
+// Links
+// Typography
+// Embedded content
+// Figures
+// Forms
+// Tables
+
 // HTML5 display definitions
 // ----------------------------------------------------------------------------
 
