--- a/assets/stylesheets/source/base/_scaffolding.scss
+++ b/assets/stylesheets/source/base/_scaffolding.scss
@@ -15,7 +15,9 @@
 // whose root is set in ems. So we set the root font size in percentages of
 // the default font size.
 html {
-  font-size: strip-unit($px-base) / 16 * 100%;
+  @include prefixer(text-size-adjust, 100%, ms webkit);
+  font-size: strip-unit($font-size-base) / 16 * 100%;
+  // Remove gray highlight when tapping links in mobile safari
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
