--- a/assets/stylesheets/source/settings/mixins/_visual-baseline.scss
+++ b/assets/stylesheets/source/settings/mixins/_visual-baseline.scss
@@ -12,7 +12,7 @@
     }
     @else {
       @include linear-gradient(top, rgba(0,0,0,0) 95%, $visual-baseline-color 100%);
-      background-size: 100% $line-height-computed;
+      background-size: 100% $line-height-base;
       background-position: 0 0; // Use to offset and center your grid
     }
   }
