--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -12,6 +12,7 @@
 
 // Functions
 @import "functions/absolute-unit";
+@import "functions/font-scale";
 @import "functions/leading";
 @import "functions/min-lines-for";
 @import "functions/px-to-font-unit";
