--- a/assets/stylesheets/source/styles.scss
+++ b/assets/stylesheets/source/styles.scss
@@ -22,13 +22,15 @@
 
 @include headings() {
   background: rgba(yellow, .25);
-  margin: 0;
 }
 
-$weird-size: 49px;
+// h1 { @include font-size($font-size-h1); }
+h1 { @include font-size($font-size-h1); }
+h2 { @include font-size($font-size-h2); }
+h3 { @include font-size($font-size-h3); }
+h4 { @include font-size($font-size-h4); }
+h5 { @include font-size($font-size-h5); }
+h6 { @include font-size($font-size-h6); }
 
-h1 {
-  @include font-size($weird-size);
-  @include margin(1 0 2);
-  @include border-top(11px, $font-size: $weird-size);
-}
+.sm { @include font-size($font-size-sm); }
+.xs { @include font-size($font-size-xs); }
