--- a/assets/stylesheets/source/base/_headings.scss
+++ b/assets/stylesheets/source/base/_headings.scss
@@ -2,67 +2,26 @@
 // Headings
 // ============================================================================
 
-// Contents
-// ----------------------------------------------------------------------------
-
-// Variables
-// Base styles
-
 // Variables
 // ----------------------------------------------------------------------------
 
 $heading-color:             $gray-dark !default;
 $heading-font-family:       $font-family-base !default;
+$heading-font-weight:       $font-weight-bold;
 
 // Base styles
 // ----------------------------------------------------------------------------
 
-
-
-
-
-
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: $headings-font-family;
-  font-weight: $headings-font-weight;
-  line-height: $headings-line-height;
-  color: $headings-color;
-
-  small,
-  .small {
-    font-weight: normal;
-    line-height: 1;
-    color: $headings-small-color;
-  }
+h1, h2, h3, h4, h5, h6 {
+  @include margin(1 0);
+  color: $heading-color;
+  font-family: $heading-font-family;
+  font-weight: $heading-font-weight;
 }
 
-h1, .h1,
-h2, .h2,
-h3, .h3 {
-  margin-top: $line-height-computed;
-  margin-bottom: ($line-height-computed / 2);
-
-  small,
-  .small {
-    font-size: 65%;
-  }
-}
-h4, .h4,
-h5, .h5,
-h6, .h6 {
-  margin-top: ($line-height-computed / 2);
-  margin-bottom: ($line-height-computed / 2);
-
-  small,
-  .small {
-    font-size: 75%;
-  }
-}
-
-h1, .h1 { font-size: $font-size-h1; }
-h2, .h2 { font-size: $font-size-h2; }
-h3, .h3 { font-size: $font-size-h3; }
-h4, .h4 { font-size: $font-size-h4; }
-h5, .h5 { font-size: $font-size-h5; }
-h6, .h6 { font-size: $font-size-h6; }
+h1 { @include font-size($font-size-h1); }
+h2 { @include font-size($font-size-h2); }
+h3 { @include font-size($font-size-h3); }
+h4 { @include font-size($font-size-h4); }
+h5 { @include font-size($font-size-h5); }
+h6 { @include font-size($font-size-h6); }
