--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -18,6 +18,7 @@
 @import "functions/px-to-font-unit";
 @import "functions/rel-to-font-unit";
 @import "functions/relative-unit";
+@import "functions/root-size";
 @import "functions/strip-unit";
 
 // Variables
