--- a/assets/stylesheets/source/base/_paragraphs.scss
+++ b/assets/stylesheets/source/base/_paragraphs.scss
@@ -1,3 +1,13 @@
 // ============================================================================
 // Paragraphs
 // ============================================================================
+
+// OpenType ligatures and oldstyle figures enabled if available.
+p {
+  @include font-feature-settings(kern onum liga);
+  @include margin-bottom(1);
+}
+
+.lead {
+  @include font-size($font-size-md);
+}
