--- a/assets/stylesheets/source/settings/_type.scss
+++ b/assets/stylesheets/source/settings/_type.scss
@@ -21,6 +21,11 @@ $font-size-h4:        font-scale(2) !default;
 $font-size-h5:        font-scale(1) !default;
 $font-size-h6:        font-scale(0) !default;
 
+$font-size-xxl:       font-scale(4) !default;
+$font-size-xl:        font-scale(3) !default;
+$font-size-lg:        font-scale(2) !default;
+$font-size-md:        font-scale(1) !default;
+
 $font-size-sm:        font-scale(-1) !default;
 $font-size-xs:        font-scale(-2) !default;
 
