--- a/assets/stylesheets/source/settings/_components.scss
+++ b/assets/stylesheets/source/settings/_components.scss
@@ -27,3 +27,8 @@ $padding-xs-horizontal:      0.5em !default;
 // Active element colors
 $component-active-color:    white !default;
 $component-active-bg:       $brand-primary !default;
+
+// Border sizes
+$border-size-base:          2px !default;
+$border-size-lg:            4px !default;
+$border-size-sm:            2px !default;
