--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -32,6 +32,7 @@
 
 // Mixins
 @import "mixins/debug";
+@import "mixins/font-feature-settings";
 @import "mixins/font-size";
 @import "mixins/headings";
 @import "mixins/hyphens";
