More fancy styles

--- a/assets/stylesheets/source/base/base.scss
+++ b/assets/stylesheets/source/base/base.scss
@@ -19,3 +19,7 @@
 @import "paragraphs";
 @import "blockquotes";
 @import "links";
+@import "emphasis";
+@import "misc";
+@import "code";
+@import "fancies";
