--- a/assets/stylesheets/source/base/_headings.scss
+++ b/assets/stylesheets/source/base/_headings.scss
@@ -2,22 +2,12 @@
 // Headings
 // ============================================================================
 
-// Variables
-// ----------------------------------------------------------------------------
-
-$heading-color:             $gray-dark !default;
-$heading-font-family:       $font-family-base !default;
-$heading-font-weight:       $font-weight-bold;
-
-// Base styles
-// ----------------------------------------------------------------------------
-
 h1, h2, h3, h4, h5, h6 {
   @include font-feature-settings(dlig liga lnum kern);
   @include margin(1 0);
-  color: $heading-color;
-  font-family: $heading-font-family;
-  font-weight: $heading-font-weight;
+  color: $text-color;
+  font-family: $font-family-base;
+  font-weight: $font-weight-bold;
   text-rendering: optimizeLegibility;
 }
 
